# Chip-8

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: cpu.h  debbuger.h  disassembler.h  gui.h  opcode.h
resources/html/: gui.html
src/: main.cpp
test/: CMakeLists.txt  cpu.cpp  cpu_test.cpp  disassembler.cpp  disassembler_test.cpp
